Customizing the essentia theme

--- a/public/index.html
+++ b/public/index.html
@@ -55,40 +55,56 @@
 					<div class="sl-slide bg-1" data-orientation="horizontal" data-slice1-rotation="-25" data-slice2-rotation="-25" data-slice1-scale="2" data-slice2-scale="2">
 						<div class="sl-slide-inner">
 							<div class="deco" data-icon="H"></div>
-							<h2>A bene placito</h2>
-							<blockquote><p>You have just dined, and however scrupulously the slaughterhouse is concealed in the graceful distance of miles, there is complicity.</p><cite>Ralph Waldo Emerson</cite></blockquote>
+							<h2>Spacify</h2>
+							<blockquote><p>I Have Too Many Photos On My Phone</p><cite>- Me</cite></blockquote>
 						</div>
 					</div>
 
 					<div class="sl-slide bg-2" data-orientation="vertical" data-slice1-rotation="10" data-slice2-rotation="-15" data-slice1-scale="1.5" data-slice2-scale="1.5">
 						<div class="sl-slide-inner">
 							<div class="deco" data-icon="q"></div>
-							<h2>Regula aurea</h2>
-							<blockquote><p>Until he extends the circle of his compassion to all living things, man will not himself find peace.</p><cite>Albert Schweitzer</cite></blockquote>
+							<h2>Spacify</h2>
+							<blockquote><p>I Only Want Quality Photos On My Phone</p><cite>- Photo Bug</cite></blockquote>
 						</div>
 					</div>
 
 					<div class="sl-slide bg-3" data-orientation="horizontal" data-slice1-rotation="3" data-slice2-rotation="3" data-slice1-scale="2" data-slice2-scale="1">
 						<div class="sl-slide-inner">
 							<div class="deco" data-icon="O"></div>
-							<h2>Dum spiro, spero</h2>
-							<blockquote><p>Thousands of people who say they 'love' animals sit down once or twice a day to enjoy the flesh of creatures who have been utterly deprived of everything that could make their lives worth living and who endured the awful suffering and the terror of the abattoirs.</p><cite>Dame Jane Morris Goodall</cite></blockquote>
+							<h2>Spacify</h2>
+							<blockquote><p>Dealing With The iPhone Camera Roll Is Painful</p><cite>- Everyone</cite></blockquote>
 						</div>
 					</div>
 
 					<div class="sl-slide bg-4" data-orientation="vertical" data-slice1-rotation="-5" data-slice2-rotation="25" data-slice1-scale="2" data-slice2-scale="1">
 						<div class="sl-slide-inner">
 							<div class="deco" data-icon="I"></div>
-							<h2>Donna nobis pacem</h2>
-							<blockquote><p>The human body has no more need for cows' milk than it does for dogs' milk, horses' milk, or giraffes' milk.</p><cite>Michael Klaper M.D.</cite></blockquote>
+							<h2>Spacify</h2>
+							<blockquote><p>I Take Too Many Screenshots</p><cite>- Workaholic</cite></blockquote>
 						</div>
 					</div>
 
 					<div class="sl-slide bg-5" data-orientation="horizontal" data-slice1-rotation="-5" data-slice2-rotation="10" data-slice1-scale="2" data-slice2-scale="1">
 						<div class="sl-slide-inner">
 							<div class="deco" data-icon="t"></div>
-							<h2>Acta Non Verba</h2>
-							<blockquote><p>I think if you want to eat more meat you should kill it yourself and eat it raw so that you are not blinded by the hypocrisy of having it processed for you.</p><cite>Margi Clarke</cite></blockquote>
+							<h2>Spacify</h2>
+							<blockquote><p>Friends Send Me Shitty Photos All The Time</p><cite>- So Social</cite></blockquote>
+						</div>
+					</div>
+					
+					<div class="sl-slide bg-6" data-orientation="horizontal" data-slice1-rotation="-5" data-slice2-rotation="10" data-slice1-scale="2" data-slice2-scale="1">
+						<div class="sl-slide-inner">
+							<div class="deco" data-icon="t"></div>
+							<h2>Spacify</h2>
+							<blockquote><p>I Am Stupid For Having Bought Only A 16GB iPhone</p><cite>- Regretful iPhone Lover</cite></blockquote>
+						</div>
+					</div>
+					
+					<div class="sl-slide bg-7" data-orientation="horizontal" data-slice1-rotation="-5" data-slice2-rotation="10" data-slice1-scale="2" data-slice2-scale="1">
+						<div class="sl-slide-inner">
+							<div class="deco" data-icon="t"></div>
+							<h2>Spacify</h2>
+							<blockquote><p>I Have A Crush On The Developers Of This App</p><cite>- Hot Pants</cite></blockquote>
 						</div>
 					</div>
 				</div><!-- /sl-slider -->
@@ -98,13 +114,6 @@
 					<span class="nav-arrow-next">Next</span>
 				</nav>
 
-				<nav id="nav-dots" class="nav-dots">
-					<span class="nav-dot-current"></span>
-					<span></span>
-					<span></span>
-					<span></span>
-					<span></span>
-				</nav>
 
 			</div><!-- /slider-wrapper -->
 
@@ -226,7 +235,7 @@
 	<footer>
 		
 		<div id="copyright">
-			essentia &copy; 2013 creativeLabs. <a href="http://bootstrapmaster.com" alt="Bootstrap Themes">Bootstrap Themes</a> Designed by BootstrapMaster in Poland <img src="images/poland.png" alt="Poland" style="margin-top:-4px">
+			SPACIFY &copy; 2015 Mumba Brothers. In our minimal free time.
 		</div>
 		<div id="social">
 			<a href="http://facebook.com/BootstrapMaster" rel="tooltip" title="Facebook" class="facebook">Facebook</a>
