Revise Index layout

--- a/public/index.html
+++ b/public/index.html
@@ -54,57 +54,57 @@
 
 					<div class="sl-slide bg-1" data-orientation="horizontal" data-slice1-rotation="-25" data-slice2-rotation="-25" data-slice1-scale="2" data-slice2-scale="2">
 						<div class="sl-slide-inner">
-							<div class="deco" data-icon="H"></div>
+							<div class="deco" data-icon="S"></div>
 							<h2>Spacify</h2>
-							<blockquote><p>I Have Too Many Photos On My Phone</p><cite>- Me</cite></blockquote>
+							<blockquote><p>I have too many photos on my phone</p><cite>- Me</cite></blockquote>
 						</div>
 					</div>
 
 					<div class="sl-slide bg-2" data-orientation="vertical" data-slice1-rotation="10" data-slice2-rotation="-15" data-slice1-scale="1.5" data-slice2-scale="1.5">
 						<div class="sl-slide-inner">
-							<div class="deco" data-icon="q"></div>
+							<div class="deco" data-icon="P"></div>
 							<h2>Spacify</h2>
-							<blockquote><p>I Only Want Quality Photos On My Phone</p><cite>- Photo Bug</cite></blockquote>
+							<blockquote><p>I only want to keep quality photos</p><cite>- Photo Bug</cite></blockquote>
 						</div>
 					</div>
 
 					<div class="sl-slide bg-3" data-orientation="horizontal" data-slice1-rotation="3" data-slice2-rotation="3" data-slice1-scale="2" data-slice2-scale="1">
 						<div class="sl-slide-inner">
-							<div class="deco" data-icon="O"></div>
+							<div class="deco" data-icon="A"></div>
 							<h2>Spacify</h2>
-							<blockquote><p>Dealing With The iPhone Camera Roll Is Painful</p><cite>- Everyone</cite></blockquote>
+							<blockquote><p>The iPhone Camera Roll is a pain</p><cite>- Everyone</cite></blockquote>
 						</div>
 					</div>
 
 					<div class="sl-slide bg-4" data-orientation="vertical" data-slice1-rotation="-5" data-slice2-rotation="25" data-slice1-scale="2" data-slice2-scale="1">
 						<div class="sl-slide-inner">
-							<div class="deco" data-icon="I"></div>
+							<div class="deco" data-icon="C"></div>
 							<h2>Spacify</h2>
-							<blockquote><p>I Take Too Many Screenshots</p><cite>- Workaholic</cite></blockquote>
+							<blockquote><p>I take too many screenshots</p><cite>- Workaholic</cite></blockquote>
 						</div>
 					</div>
 
 					<div class="sl-slide bg-5" data-orientation="horizontal" data-slice1-rotation="-5" data-slice2-rotation="10" data-slice1-scale="2" data-slice2-scale="1">
 						<div class="sl-slide-inner">
-							<div class="deco" data-icon="t"></div>
+							<div class="deco" data-icon="I"></div>
 							<h2>Spacify</h2>
-							<blockquote><p>Friends Send Me Shitty Photos All The Time</p><cite>- So Social</cite></blockquote>
+							<blockquote><p>I stupidly bought a 16GB phone</p><cite>- Regretful Apple Fan</cite></blockquote>
 						</div>
 					</div>
 					
-					<div class="sl-slide bg-6" data-orientation="horizontal" data-slice1-rotation="-5" data-slice2-rotation="10" data-slice1-scale="2" data-slice2-scale="1">
+					<div class="sl-slide bg-6" data-orientation="vertical" data-slice1-rotation="-5" data-slice2-rotation="10" data-slice1-scale="2" data-slice2-scale="1">
 						<div class="sl-slide-inner">
-							<div class="deco" data-icon="t"></div>
+							<div class="deco" data-icon="F"></div>
 							<h2>Spacify</h2>
-							<blockquote><p>I Am Stupid For Having Bought Only A 16GB iPhone</p><cite>- Regretful iPhone Lover</cite></blockquote>
+							<blockquote><p>My friends send me too many shitty photos</p><cite>- So Social</cite></blockquote>
 						</div>
 					</div>
 					
 					<div class="sl-slide bg-7" data-orientation="horizontal" data-slice1-rotation="-5" data-slice2-rotation="10" data-slice1-scale="2" data-slice2-scale="1">
 						<div class="sl-slide-inner">
-							<div class="deco" data-icon="t"></div>
+							<div class="deco" data-icon="Y"></div>
 							<h2>Spacify</h2>
-							<blockquote><p>I Have A Crush On The Developers Of This App</p><cite>- Hot Pants</cite></blockquote>
+							<blockquote><p>I have a crush on the Developers of this App</p><cite>- Maybe?</cite></blockquote>
 						</div>
 					</div>
 				</div><!-- /sl-slider -->
