change button sizes

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
 							<h2>Spacify</h2>
 							<blockquote><p>I have too many photos on my phone</p><cite>- Me</cite></blockquote>
 							<div class="actions">
-								<div class="btn btn-danger reject-button">Not Really, No.</div>
+								<div class="btn btn-danger btn-large reject-button">Not Really, No.</div>
 								<div class="btn btn-success btn-large">I do! Help.</div>
 							</div>
 						</div>
@@ -70,7 +70,7 @@
 							<h2>Spacify</h2>
 							<blockquote><p>I only want to keep quality photos</p><cite>- Photo Bug</cite></blockquote>
 							<div class="actions">
-								<div class="btn btn-danger reject-button">Blur stuff is fine</div>
+								<div class="btn btn-danger btn-large reject-button">Blur stuff is fine</div>
 								<div class="btn btn-success btn-large">Of Course!</div>
 							</div>
 						</div>
@@ -82,7 +82,7 @@
 							<h2>Spacify</h2>
 							<blockquote><p>The iPhone Camera Roll is a pain</p><cite>- Everyone</cite></blockquote>
 							<div class="actions">
-								<div class="btn btn-danger reject-button">I Love Pain</div>
+								<div class="btn btn-danger btn-large reject-button">I Love Pain</div>
 								<div class="btn btn-success btn-large">Actually, Yes.</div>
 							</div>
 						</div>
@@ -94,7 +94,7 @@
 							<h2>Spacify</h2>
 							<blockquote><p>I take too many screenshots</p><cite>- Workaholic</cite></blockquote>
 							<div class="actions">
-								<div class="btn btn-danger reject-button">What's a screenshot?</div>
+								<div class="btn btn-danger btn-large reject-button">What's a screenshot?</div>
 								<div class="btn btn-success btn-large">All the time.</div>
 							</div>
 						</div>
@@ -106,7 +106,7 @@
 							<h2>Spacify</h2>
 							<blockquote><p>I stupidly bought a 16GB phone</p><cite>- Regretful Apple Fan</cite></blockquote>
 							<div class="actions">
-								<div class="btn btn-danger reject-button">I don't need space</div>
+								<div class="btn btn-danger btn-large reject-button">I don't need space</div>
 								<div class="btn btn-success btn-large">:(, Yes</div>
 							</div>
 						</div>
@@ -118,7 +118,7 @@
 							<h2>Spacify</h2>
 							<blockquote><p>My friends send me too many shitty photos</p><cite>- So Social</cite></blockquote>
 							<div class="actions">
-								<div class="btn btn-danger reject-button">I have no friends</div>
+								<div class="btn btn-danger btn-large reject-button">I have no friends</div>
 								<div class="btn btn-success btn-large">Too Often</div>
 							</div>
 						</div>
@@ -130,7 +130,7 @@
 							<h2>Spacify</h2>
 							<blockquote><p>I have a crush on the Developers of this App</p><cite>- Maybe?</cite></blockquote>
 							<div class="actions">
-								<div class="btn btn-danger">Not yet.</div>
+								<div class="btn btn-danger btn-large">Not yet.</div>
 								<div class="btn btn-success btn-large">Throw my money at them</div>
 							</div>
 						</div>
