--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
 	<!-- start: 1st Page - Home -->
 	<div id="home">
 
-		<div class="demo-1">
+		<div class="demo-2">
 
 	        <div id="slider" class="sl-slider-wrapper">
 
@@ -58,8 +58,8 @@
 							<h2>Spacify</h2>
 							<blockquote><p>I have too many photos on my phone</p><cite>- Me</cite></blockquote>
 							<div class="actions">
-								<div class="btn btn-danger reject-button">Not Really, No.</div>
-								<div class="btn btn-success">I do! Help.</div>
+								<div class="btn btn-large btn-danger reject-button">Not Really, No.</div>
+								<div class="btn btn-large btn-success">I do! Help.</div>
 							</div>
 						</div>
 					</div>
@@ -70,8 +70,8 @@
 							<h2>Spacify</h2>
 							<blockquote><p>I only want to keep quality photos</p><cite>- Photo Bug</cite></blockquote>
 							<div class="actions">
-								<div class="btn btn-danger reject-button">Blur stuff is fine</div>
-								<div class="btn btn-success">Of Course!</div>
+								<div class="btn btn-large btn-danger reject-button">Blur stuff is fine</div>
+								<div class="btn btn-large btn-success">Of Course!</div>
 							</div>
 						</div>
 					</div>
@@ -82,8 +82,8 @@
 							<h2>Spacify</h2>
 							<blockquote><p>The iPhone Camera Roll is a pain</p><cite>- Everyone</cite></blockquote>
 							<div class="actions">
-								<div class="btn btn-danger reject-button">I Love Pain</div>
-								<div class="btn btn-success">Actually, Yes.</div>
+								<div class="btn btn-large btn-danger reject-button">I Love Pain</div>
+								<div class="btn btn-large btn-success">Actually, Yes.</div>
 							</div>
 						</div>
 					</div>
@@ -94,8 +94,8 @@
 							<h2>Spacify</h2>
 							<blockquote><p>I take too many screenshots</p><cite>- Workaholic</cite></blockquote>
 							<div class="actions">
-								<div class="btn btn-danger reject-button">What's a screenshot?</div>
-								<div class="btn btn-success">All the time.</div>
+								<div class="btn btn-large btn-danger reject-button">What's a screenshot?</div>
+								<div class="btn btn-large btn-success">All the time.</div>
 							</div>
 						</div>
 					</div>
@@ -106,8 +106,8 @@
 							<h2>Spacify</h2>
 							<blockquote><p>I stupidly bought a 16GB phone</p><cite>- Regretful Apple Fan</cite></blockquote>
 							<div class="actions">
-								<div class="btn btn-danger reject-button">I don't need space</div>
-								<div class="btn btn-success">:(, Yes</div>
+								<div class="btn btn-large btn-danger reject-button">I don't need space</div>
+								<div class="btn btn-large btn-success">:(, Yes</div>
 							</div>
 						</div>
 					</div>
@@ -118,8 +118,8 @@
 							<h2>Spacify</h2>
 							<blockquote><p>My friends send me too many shitty photos</p><cite>- So Social</cite></blockquote>
 							<div class="actions">
-								<div class="btn btn-danger reject-button">I have no friends</div>
-								<div class="btn btn-success">Too Often</div>
+								<div class="btn btn-large btn-danger reject-button">I have no friends</div>
+								<div class="btn btn-large btn-success">Too Often</div>
 							</div>
 						</div>
 					</div>
@@ -130,8 +130,7 @@
 							<h2>Spacify</h2>
 							<blockquote><p>I have a crush on the Developers of this App</p><cite>- Maybe?</cite></blockquote>
 							<div class="actions">
-								<div class="btn btn-danger">Not yet.</div>
-								<div class="btn btn-success">Throw money at them</div>
+								<div class="btn btn-large btn-success">Absolutely</div>
 							</div>
 						</div>
 					</div>
